<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ламрим</string>
    <string name="app_version">1.0</string>

    <!-- interface -->
    <string name="details_button_text">Читать полностью</string>

    <string name="appbar_scrolling_text">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!-- title for items of action bar menu -->
    <string name="tune_icon">tune</string>
    <string name="about_icon">about</string>

    <!-- content descriptions -->
    <string name="image_toolbar">image toolbar</string>

    <!-- settings -->
    <string name="font_category">Настройки текста</string>

    <string name="font_size">Размер текста</string>
    <string name="font_size_summary">Выбрать другой размер шрифта</string>
    <string name="very_min_size">очень мелкий</string>
    <string name="min_size">мелкий</string>
    <string name="middle_size">средний</string>
    <string name="big_size">большой</string>
    <string name="very_big_size">очень большой</string>

    <string name="font_color">Цвет текста</string>
    <string name="font_color_summary">Выбрать другой цвет шрифта</string>
    <string name="black_color">черный</string>
    <string name="gray_color">серый</string>
    <string name="brown_color">коричневый</string>
    <string name="blue_color">синий</string>

    <string name="about_program_category">О приложении</string>
    <string name="program_information">Информация</string>
    <string name="information_summary">Дополнительная информация о версии и источниках ресурсов</string>

    <string name="program_name">Название программы</string>
    <string name="version_pref">Версия программы</string>

    <string name="additional_resources">Дополнительные ресурсы</string>
    <string name="images_summary">Изображения: www.goodfon.ru</string>

    <!-- about program alert dialog -->
    <string name="ok_button">OK</string>
    <string name="app_bar_about_descript">app_bar_about_descript</string>
    <string name="about_icon_descript">icon_des_descript</string>
    <string name="about_program_text">Приложение является конспектом книги Чже Цонкапа \'\'Большое руководство к этапам Пути Пробуждения\'\' (Ламрим). Том I. Подготовительная часть и этап духовного развития низшей личности. Перевод с тибетского языка А. Кугявичуса под общей редакцией А. Терентьева. Поэтический перевод цитат и транскрипция тибетских имен М. Кожевниковой.\n\nАвтор приложения конспектировал текстовые материалы, которые по его мнению, являются наиболее важными для передачи общего смысла произведения. Чтобы получить больше информации, читателю необходимо обратиться к первоисточнику. Также из соображений удобства чтения, пропущены имена авторов некоторых цитат и ссылки на них. Эти сведения можно узнать из оригинального текста.\n\nПриложение не направлено против других вероисповеданий (Христианство, Ислам, Иудаизм и пр.) и носит ознакомительный характер.</string>

</resources>
